@@ -41,6 +41,7 @@ Minor changes
  * Recreate dataset now works if dialog hasn't been opened already
  * Restore dock layout when using Python3
  * Fix undo after loading stylesheet/custom definitions
+ * Support unicode example filenames
 
 Features of package:
  Plotting features:
